# payment-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260420_000001_init_payments_and_outbox.py
app/: main.py
app/api/v1/: payments.py  router.py
app/consumers/: payment_consumer.py
app/core/: config.py  dependencies.py  middleware.py
app/db/: base.py  unit_of_work.py
app/messaging/: rabbitmq_outbox.py  rabbitmq_retry.py
app/models/: enums.py  outbox.py  payment.py
app/repositories/payment/: base.py  client_payment.py  outbox_payment.py
app/schemas/: __init__.py  messaging.py  payment.py
app/services/: outbox_publisher.py  webhook_sender.py
app/services/payment/: __init__.py  client_payment_service.py  gateway_simulator.py  processor.py
app/workers/: celery_app.py
app/workers/tasks/: outbox.py
