[tool.poetry]
package-mode = false

[project]
name = "payment-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11,<4"
dependencies = [
    "fastapi[standard] (>=0.136.0,<0.137.0)",
    "uvicorn[standart] (>=0.44.0,<0.45.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)",
    "greenlet (>=3.0.0,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "faststream[rabbit] (>=0.6.7,<0.7.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "celery (>=5.4.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
